[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/bg.gd" type="Script" id=1]
[ext_resource path="res://graphics/bg/bg_fade.png" type="Texture" id=2]
[ext_resource path="res://graphics/bg/bg_hexarepel.png" type="Texture" id=3]
[ext_resource path="res://graphics/ui/game/ui_next_hex_gradient.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "rotation_bg_hex"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="bg" type="CanvasLayer"]
layer = -1
script = ExtResource( 1 )

[node name="bg_color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0.501961, 0.67451, 1 )

[node name="bg_fade" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="bg_hexarepel" type="TextureRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.5
margin_top = -267.282
margin_right = 248.5
margin_bottom = 306.718
rect_scale = Vector2( 1.1, 1.1 )
rect_pivot_offset = Vector2( 248.5, 287 )
mouse_filter = 2
texture = ExtResource( 3 )

[node name="animation_player" type="AnimationPlayer" parent="bg_hexarepel"]
autoplay = "rotation_bg_hex"
anims/rotation_bg_hex = SubResource( 1 )

[node name="glow_first" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_right = 0.5
margin_top = 75.0
margin_right = 258.0
margin_bottom = 332.0
rect_scale = Vector2( 0.45, 0.45 )
rect_pivot_offset = Vector2( -105, -105 )
mouse_filter = 2
texture = ExtResource( 4 )

[node name="glow_second" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 120.0
margin_top = 75.0
margin_right = 378.0
margin_bottom = 332.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( -68, -68 )
mouse_filter = 2
texture = ExtResource( 4 )
